<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".controller.OrderFragment">

	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			tools:srcCompat="@tools:sample/backgrounds/scenic"
			android:id="@+id/imgProductDt"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			android:scaleType="centerInside"
			android:adjustViewBounds="true"
			android:foregroundGravity="center_horizontal"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/tvProductDtlHeader"
			app:layout_constraintVertical_bias="0"
			android:contentDescription="@string/todo"/>

	<TextView
			android:text="@string/tvProductHeader"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/tvProductDtlHeader"
			app:layout_constraintStart_toStartOf="parent"
			android:textSize="24sp"
			android:textStyle="bold"
			android:fontFamily="sans-serif-medium"
			app:layout_constraintHorizontal_bias="0.373"
			app:layout_constraintEnd_toStartOf="@+id/tvProductDtlDesc"
			app:layout_constraintBottom_toTopOf="@+id/order_quantity" android:layout_marginBottom="92dp"/>
	<TextView
			android:text="@string/tvProductDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/tvProductDtlDesc"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/order_quantity"
			android:layout_marginBottom="104dp" android:layout_marginEnd="96dp"/>
	<Button
			android:text="@string/next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnPay"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginEnd="44dp"
			android:layout_marginBottom="40dp"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/order_quantity"
			android:hint="@string/product_quantity" android:minHeight="48dp" app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toTopOf="@+id/order_total_price" android:layout_marginEnd="100dp"
			android:layout_marginBottom="104dp"/>
	<EditText
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:id="@+id/order_total_price"
			android:hint="@string/order_total_price" app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/btnPay" android:layout_marginEnd="36dp"
			android:layout_marginBottom="60dp" android:minHeight="48dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>