<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.ProductDetailFragment">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:id="@+id/imgProductDt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:foregroundGravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvProductDtlHeader"
            app:layout_constraintVertical_bias="0"
            android:contentDescription="@string/todo"/>

    <TextView
            android:text="@string/tvProductHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProductDtlHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            app:layout_constraintBottom_toTopOf="@+id/tvProductDtlDesc"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="32dp"/>

    <TextView
            android:text="@string/tvProductDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvProductDtlDesc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="340dp"
            app:layout_constraintHorizontal_bias="0.498"/>

    <Button
            android:text="@string/buy_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBuyNow"
            app:layout_constraintEnd_toStartOf="@+id/btnAddToCart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginBottom="132dp"/>

    <Button
            android:text="@string/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddToCart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="132dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>