<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic"
                    android:id="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/todo"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/tvProductHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvProductHeader"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="5dp"
                        android:textAlignment="viewStart"
                        android:textStyle="bold"
                        android:textSize="24sp"/>

                <TextView
                        android:text="@string/tvProductDesc"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:id="@+id/tvProductDesc"
                        android:layout_weight="1"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="5dp"/>
                <TextView
                        android:id="@+id/tvProductPrice"
                        android:text="@string/product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginVertical="5dp"
                />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>